--- a/css/cssGrid/index.html
+++ b/css/cssGrid/index.html
@@ -8,19 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <header>
-
-        </header>
-        <main>
-
-        </main>
-        <aside>
-
-        </aside>
-        <footer>
-
-        </footer>
-    </div>
-    
+        <header> </header>
+        <main> </main>
+        <aside> </aside>
+        <footer> </footer>
+    </div>   
 </body>
 </html>
