--- a/button-creator/index.html
+++ b/button-creator/index.html
@@ -36,7 +36,7 @@
       <input type="number" name="fontSize" id="fontSize" min="0" max="20">
     </form>
   </section>
-
+  <script src="script.js"></script>
 </body>
 
 </html>
