Atualiza HTML com section resultado.

--- a/button-creator/index.html
+++ b/button-creator/index.html
@@ -35,6 +35,10 @@
       <label for="fontSize">Font-Size</label>
       <input type="number" name="fontSize" id="fontSize" min="0" max="20">
     </form>
+    <section class="resultado">
+      <button class="btn">Clique</button>
+      <pre><code class="css"></code></pre>
+    </section>
   </section>
   <script src="script.js"></script>
 </body>
