--- a/button-creator/index.html
+++ b/button-creator/index.html
@@ -17,7 +17,7 @@
       <input type="text" name="texto" id="texto">
       <label for="color"> Color </label>
       <input type="color" name="color" id="color">
-      <label for="backgroundColor">Color</label>
+      <label for="backgroundColor">Background-color</label>
       <input type="color" name="backgroundColor" id="backgroundColor">
       <label for="height">Height</label>
       <input type="range" name="height" id="height" min="0" max="600">
