Footer is done.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Button Creator</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -41,15 +44,13 @@
         <pre><code class="css"></code></pre>
       </section>
     </section>
-  </section>
-  <section class="resetButton">
     <button class="resetButton__btn">reset</button>
-    <img src="./img/arrowRightAltBlack.svg">
   </section>
   <script src="script.js"></script>
+  <footer class="footer">
+    <p class="footerP">Made with <span class="material-icons">favorite</span> by @camimq <img class="footerI" src="./img/githubIcon.svg"></p>
+  </footer>
 </body>
-<footer>
-  <p class="footer">Made with <img class="footerImg" src="./img/favoriteBlack.svg"> by @camimq <img src="./img/githubIcon.svg"></p>
-</footer>
+
 
 </html>
