Add a CSS style for the reset button.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
         <button class="btn">Clique</button>
         <pre><code class="css"></code></pre>
       </section>
+      <section class="resetButton">
+        <button class="resetButton__btn">reset</button>
+      </section>
     </section>
-    <button class="resetButton__btn">reset</button>
   </section>
   <script src="script.js"></script>
   <footer class="footer">
