Updates the label for text.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section class="blackContainer">
     <section class="button-creator">
       <form id="controles">
-        <label for="texto">Texto</label>
+        <label for="texto">Text</label>
         <input type="text" name="texto" id="texto">
         <label for="color"> Color </label>
         <input type="color" name="color" id="color">
